# Battleship

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Field/: CMakeLists.txt  Field.cpp  Field.h  Ship.cpp  Ship.h
lib/FieldStorage/: CMakeLists.txt  CompressedFieldStorage.cpp  CompressedFieldStorage.h  FieldCompressor.cpp  FieldCompressor.h  IFieldStorage.h
lib/Game/: CMakeLists.txt  IGame.h  MasterGame.cpp  MasterGame.h  SlaveGame.cpp  SlaveGame.h
lib/IO/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h
lib/Strategy/: CMakeLists.txt  IStrategy.h  OrderedStrategy.cpp  OrderedStrategy.h
lib/Strategy/CustomStrategy/: CustomStrategy.cpp  CustomStrategy.h
lib/Strategy/CustomStrategy/Hunting/: HuntingManager.cpp  HuntingManager.h  IHuntingManager.h
lib/Strategy/CustomStrategy/Pattern/: IPatternManager.h  PatternManager.cpp  PatternManager.h
lib/Strategy/CustomStrategy/Statistics/: Statistics.cpp  Statistics.h
lib/Strategy/CustomStrategy/Zone/: IZoneManager.h  ZoneManager.cpp  ZoneManager.h
tests/: CMakeLists.txt  CommandHandlerTest.cpp  GameTest.cpp
